# habushu

./: .gitignore  LICENSE  README.md  pom.xml  release-habushu.sh
.github/workflows/: maven.yaml
habushu-maven-plugin/: pom.xml
habushu-maven-plugin/src/main/java/org/technologybrewery/habushu/: AbstractHabushuMojo.java  BehaveBddTestMojo.java  BuildDeploymentArtifactsMojo.java  CacheWheelsMojo.java  CleanHabushuMojo.java  FormatPythonMojo.java  HabushuException.java  InitializeHabushuMojo.java  (+12 more)
habushu-maven-plugin/src/main/resources/: migrations.json
habushu-maven-plugin/src/main/resources/assemblies/: habushu-assembly.xml
habushu-maven-plugin/src/test/resources/: base-test-pyproject.toml  junit-platform.properties
habushu-maven-plugin/src/test/resources/migration/monorepo/: no-monorepo-dependencies-present.toml  with-dependencies-already-in-monorepo-group.toml  with-dependencies-in-both-groups.toml  with-dependencies-no-monorepo-group.toml
habushu-maven-plugin/src/test/resources/migration/poetrycore/: with-poetry-core-version-1-0-0.toml  with-poetry-core-version-1-5-8.toml  with-poetry-core-version-1-5.toml  with-poetry-core-version-1-6-0.toml  with-poetry-core-version-1-7-0.toml  with-poetry-core-version-2-0-0.toml
habushu-maven-plugin/src/test/resources/specifications/: dependency-management.feature  monorepo-migrations.feature  package-version-override.feature  poetry-core-version-migration.feature  report-formatting.feature  retrieve-wheels.feature
habushu-maven-plugin/src/test/resources/testCacheDirectory/: base-test-wheel.whl
habushu-mixology/: .gitignore  conda.yaml  dependencies.txt  pom.xml  pyproject.toml
habushu-mixology-consumer/: conda.yaml  dependencies.txt  pom.xml  pyproject.toml
habushu-mixology-consumer/src/habushu_mixology_consumer/: verify_install.py
habushu-mixology-consumer/src/habushu_mixology_consumer/nested/: simple_dependency.py
habushu-mixology-consumer/src/main/python/: setup.py  verify_install.py
habushu-mixology-consumer/src/main/python/nested/: simple_dependency.py
habushu-mixology-consumer/src/test/python/features/: unpack-deps.feature
habushu-mixology-consumer/src/test/python/features/steps/: unpack_deps.py
habushu-mixology-consumer/tests/features/: unpack-deps.feature
habushu-mixology-consumer/tests/features/steps/: unpack_deps.py
habushu-mixology/existing-habushu-dependencies/: README.md  krausening_python-10.0.0-py3-none-any.whl
habushu-mixology/src/: person.proto
habushu-mixology/src/habushu_mixology/: helloworld.py
habushu-mixology/src/habushu_mixology/reusable_module/: worker.py
habushu-mixology/src/habushu_mixology/util/: useful.py
habushu-mixology/src/main/python/: helloworld.py  setup.py
habushu-mixology/src/main/python/habushu/reusable_module/: worker.py
habushu-mixology/src/main/python/habushu/util/: useful.py
habushu-mixology/src/main/resources/: example-resources.txt
habushu-mixology/src/test/python/config/: test_config.py
habushu-mixology/src/test/python/features/: example.feature  reference-src.feature  reference-test.feature  system-properties.feature
habushu-mixology/src/test/python/features/steps/: example-steps.py  reference_src.py  reference_test.py  use_system_properties.py
habushu-mixology/src/test/resources/config_extension/: test.properties
habushu-mixology/tests/features/: .env  .env.integration_test  environment-variables.feature  environment.py  reference-src.feature  reference-test.feature  system-properties.feature
habushu-mixology/tests/features/steps/: reference_src.py  reference_test.py  reference_test_resources.py  test_config.py  use_environment_variables.py  use_system_properties.py
habushu-mixology/tests/resources/: test-example-resources.txt
habushu-mixology/tests/resources/config/: test.properties
(+66 files in other folders)
