[tool.poetry]
name = "habushu_mixology_consumer"
version = "2.12.0.dev"
description = "Example of how to use the habushu-maven-plugin to consume other Habushu modules"
authors = ["Eric Konieczny <ekoniec1@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
habushu-mixology = {path = "../habushu-mixology", develop = true}
python = "^3.11"



[tool.poetry.group.dev.dependencies]
behave-cucumber-formatter = ">=1.0.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
